[package]
name = "capurePhoto"
version = "0.1.0"
edition = "2021"

[dependencies]




[dependencies.windows]

version = "0.58.0"
features = [
    "Media_Capture",
    "Storage",
    "Foundation",
    "Win32_Foundation",
    "Win32_System_Com"
]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
